- STREL-632 Correct somatic joint allele-frequency prior
- STREL-652 Improve somatic EVS feature consistency
- STREL-647 Improve CRAM reference handling
v2.8.2
- STREL-653 Fix haplotyping misbehavior in depth 0 positons
v2.8.1
- STREL-650 Fix allele filtration to synchronize across multiple samples
- STREL-651 Fix sequence error counting bounds
- STREL-633 Update htslib/samtools to v1.5
v2.8.0
- STREL-608 Fix hang after error during adaptive estimation
- STREL-610 Fix workflow resumption after interrupt
- STREL-557 Retrain somatic EVS on updated alignments and truth sets
- STREL-609 Fix genotyping error on forced non-variant indels
- STREL-612 Fix sites overlapping forced non-variant indels
- STREL-602 Retrain germline SNV EVS on updated alignments
- STREL-597 Add low depth filter for both somatic and germline calls
- STREL-596 Add missing data to pooled indel calls
- STREL-586 Improve germline multi-sample calling runtime
- STREL-576 Reduce demo installation size
- STREL-579 Add filtered depth rates as somatic SNV EVS features
- STREL-580 Retrain germline EVS
- STREL-260 Add validation on all input vcf reference fields
- STREL-566 Use indel error estimation by default for germline calling
- STREL-577 Fix bug creating negative size active regions
- STREL-553 Standardize somatic EVS features
- STREL-564 Add filter preventing low depth PASS calls
- STREL-567 Change readConfidentSupportThreshold to 0.51 
- STREL-524 Retrain germline EVS
- STREL-519 Fix callRegions option thread utilization
- STREL-459 Retain optimal soft-clipping for RNA analysis
- STREL-451 Enable somatic indel EVS and retrain somatic SNV EVS
- STREL-478 Change gVCF non-variant blocks to use mean depth
- STREL-469 Add RNAseq EVS models
- STREL-479 External candidate indels create active regions
- STREL-462 Do not penalize candidate SNVs in alignment scoring
- STREL-450 Add dinucs to indel error stats module
- STREL-465 Filter germline haplotypes with phasing error signature